# SysCallStubber

./: .dockerignore  .gitignore  Dockerfile  README.md
docs/: DynamicReplacement.drawio  Implementation_docker_filestructure.drawio  NormalSysCall.drawio  StaticReplacement.drawio
llvm-project/: .gitignore  compile.sh
llvm-project/compiler-rt/: CMakeLists.txt
llvm-project/compiler-rt/cmake/: config-ix.cmake
llvm-project/compiler-rt/lib/: CMakeLists.txt
llvm-project/compiler-rt/lib/rvstore/: CMakeLists.txt  rvstore.cc  rvstore.h
llvm-project/compiler-rt/test/: CMakeLists.txt
llvm-project/llvm/lib/Transforms/: CMakeLists.txt
llvm-project/llvm/lib/Transforms/DynamicSysCallMod/: CMakeLists.txt  SysCallMod.cpp
llvm-project/llvm/lib/Transforms/Hello/: Hello.cpp
llvm-project/llvm/lib/Transforms/StaticSysCallLog/: CMakeLists.txt  SysCallLog.cpp
llvm-project/llvm/lib/Transforms/StaticSysCallRepl/: CMakeLists.txt  SysCall.cpp  SysCall.h  SysCallReplacer.cpp
misc/: compile-log.sh  compile-repl.sh  example.c  execfuzz.sh  hello.c  preparer.sh
scripts/: evaluator.py  execfuzz.conf  execfuzz.sh
